[package]
name = "todo-actix"
version = "0.1.0"
authors = ["Bogdan Ivanchenko <ivanchenko.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = '1.1.1'
actix-web = '2.0.0'
serde = { version = "1.0.115", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"